--- a/app/views/dashboard.erb
+++ b/app/views/dashboard.erb
@@ -1,6 +1,9 @@
-<h1>Welcome to the Task Manager</h1>
-
-<ul>
-  <li><a href="/tasks">Task Index</a></li>
-  <li><a href="/tasks/new">New Task</a></li>
-</ul>
+<!-- <h1>Welcome to the Task Manager</h1> -->
+<div class='container'>
+  <div class='col-md-3'>
+    <ul>
+      <li class='btn btn-info btn-block'><a href="/tasks">Tasks</a></li>
+      <li class='btn btn-warning btn-block'><a href="/tasks/new">New Task</a></li>
+    </ul>
+  </div>
+</div>
